tests/ui/nll/relate_tys/universe-violation.stderr
error[E0308]: mismatched types
  --> $DIR/universe-violation.rs:13:31
   |
LL |     let b: fn(&u32) -> &u32 = a;
   |                               ^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a _) -> &'a _`
              found fn pointer `fn(&_) -> &_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
